# EasySnec

./: README.md  flake.nix  gui.py  main.py  pyproject.toml  pysidedeploy.spec
App/: Main.qml
qml_test/: main.py  qml_test.pyproject
scripts/: __build_nuitka.sh  __build_pyinstaller.sh  build_pyapp.ps1  build_pyside_deploy.sh  build_shiv.sh
src/easysnec/: __init__.py  app.py  backend.py  course.py  input_data.py  output_data.py
src/easysnec/qml/: Main.qml
src/easysnec/utils/: grading.py
tests/: conftest.py  test_grading.py
