[project]
name = "easysnec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "pyside6>=6.9.2",
    "sireader>=1.1.3",
    "sportident>=1.2.8",
]

[project.scripts]
easysnec = "easysnec.app:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
